changed Arrays.asList to List.of